<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ResultsInquiry</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">欢迎使用！</string>
    <string name="select_examtype">请选择考试类型</string>
    <string name="input_sinquiry_condition">请输入查询条件</string>
    <string name="btn_cets_text">英语四  六级考试(CET)</string>
    <string name="btn_ncre_text">计算机等级考试(NCRE)</string>
    <string name="please_select_time">请选择考试时间</string>
    <string name="please_select_province">请选择报考省份</string>
    <string name="please_select_level">请选择报考级别</string>
    <string name="select_time">考试时间:</string>
    <string name="select_province">报考省份:</string>
    <string name="select_level">报考级别:</string>
    <string name="please_input_number">准考证号:</string>
    <string name="please_input_name">姓名:</string>
    <string name="please_input_userid">身份证号:</string>
    <string name="please_input_15_cardid">请输入15位准考证号</string>
    <string name="please_input_16_cardid">请输入16位准考证号</string>
    <string name="please_input_2_name">请输入姓名的前两个字</string>
    <string name="please_input_your_userid">请输入您的身份证号</string>
    <string name="please_input_your_name">请输入您的姓名</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="title_cet">四六级考试查询</string>
    <string name="title_ncre">计算机等级考试查询</string>
    <string name="title_back">返回</string>
    <string name="btn_sinquiry">查询</string>
    <string name="btn_reset">重置</string>
    <string name="tip_zkzh_length_not_enough">准考证号长度不够</string>
    <string name="tip_siliuji_zkzh">四六级准考证号由15位数字组成</string>
    <string name="tip_jisuanji_zkzh">全国计算机等级考试准考证号共16位</string>
    <string name="tip_invalid_zkzh">无效的准考证号</string>
    <string name="tip_sfzh_length_not_enough">身份证号长度不够</string>
    <string name="tip_invalid_sfzh">无效的身份证号</string>
    <string name="tip_inclid_name">无效的姓名</string>
	<string name="sinquiry_result">查询结果</string>
	<string name="tip_getting_result">正在获取查询结果...</string>
	<string name="tip_getresult_failure">获取结果失败</string>
	<string name="tip_empty_result">您查询的结果为空</string>
	<string name="html_tag_name">姓名</string>
	<string name="html_tag_sfzh">身份证号</string>
	<string name="html_tag_kc">考次</string>
	<string name="html_tag_zkzh">准考证号</string>
	<string name="html_tag_bscj">笔试成绩</string>
	<string name="html_tag_zcj">总成绩</string>
	<string name="html_tag_sjcj">上机成绩</string>
	<string name="result_sinquiry_title">考试成绩查询结果：</string>
	<string name="result_name">考生姓名:</string>
	<string name="result_school">考生学校:</string>
	<string name="result_type">考试类别:</string>
	<string name="result_number">准考证号:</string>
	<string name="result_total_result">您的总成绩:</string>
	<string name="result_tingli">听力:</string>
	<string name="result_yuedu">阅读:</string>
	<string name="result_zonghe">综合:</string>
	<string name="result_xiezuo">写作:</string>
	<string name="result_cet4">英语四级</string>
	<string name="result_cet6">英语六级</string>
	<string name="result_past">恭喜你成功通过</string>
	<string name="result_failure">很遗憾此次未通过，请再接再厉！</string>
	<string name="ch_comma">、	</string>
	<string name="ch_space">	</string>
	<string name="url_count">http://202.114.18.229:8080/JsonWeb/AddCount</string>
	<string name="url_cet">http://cet.99sushe.com/search</string>
	<string name="url_ncre">http://chaxun.neea.edu.cn/examcenter/query.cn?op=doQueryResults</string>
</resources>