<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/home_title_frame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title"
        android:padding="13dp" >

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/select_examtype"
            android:textColor="@android:color/white"
            android:textSize="22dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_frame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="40dp" >

        <Button
            android:id="@+id/btnpets"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/sinquiry_btn_bg"
            android:gravity="center"
            android:onClick="onBtnClick"
            android:paddingBottom="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="30dp"
            android:text="@string/btn_cets_text"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btnncre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnpets"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/sinquiry_btn_bg"
            android:gravity="center"
            android:onClick="onBtnClick"
            android:paddingBottom="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="30dp"
            android:text="@string/btn_ncre_text"
            android:textSize="25dp" />
    </RelativeLayout>

</RelativeLayout>